# TokenTrail

./: .env.example  .gitignore  AGENTS.md  PORTS.md  README.md  pyproject.toml
config/: models.json
config/instructions/: hf_trace_default.txt
docs/: DEVELOPMENT_ENVIRONMENTS.md  HF_TRANSFORMERS_TRACE_SERVER_PLAN.md  LOCAL_TEST_NOTES.md  MODEL_BACKENDS.md  OLLAMA_ADAPTER_PLAN.md  OLLAMA_PHASE_2_GENERATION_PLAN.md  OLLAMA_WARMUP_PLAN.md  SLM_LIVE_TRACE_PLAN.md  STAFF_READINESS_CHECKLIST.md  TOKEN_TRAIL_ROADMAP.md
docs/superpowers/plans/: 2026-06-20-hf-trace-cli-probe.md
docs/superpowers/specs/: 2026-06-20-hf-trace-cli-probe-design.md
scripts/: benchmark_hf_trace.ps1  benchmark_hf_trace.py  check_ollama_update.ps1  check_ports.ps1  check_ports.sh  clean.ps1  probe_hf_trace.ps1  probe_hf_trace.py  probe_hf_trace.sh  probe_ollama_logprobs.py  raw_response.ps1  run.ps1  run.sh  serve_hf_trace.ps1  serve_hf_trace.py  setup.ps1  setup.sh  test.ps1  test.sh
scripts/hf_trace_python_startup/: sitecustomize.py
src/token_trail/: __init__.py  config.py  local_runner.py  ports.py  runtime.py  server.py  traces.py
src/token_trail/adapters/: __init__.py  base.py  hf_trace.py  ollama.py
tests/: test_benchmark_hf_trace.py  test_config.py  test_development_docs.py  test_hf_trace_adapter.py  test_hf_trace_server.py  test_local_runner.py  test_ollama_adapter.py  test_probe_hf_trace.py  test_probe_ollama_logprobs.py  test_project_setup.py  test_runtime.py  test_server.py  test_traces.py  test_web_app.py
web/: app.js  index.html  styles.css
